Spring-boot 3 update
- update to spring boot 3.0.13, this includes:
- change of javax to jakarta namespace
- upgrade of eclipselink (2.7.15 -> 3.0.1)

Issue-ID: AAI-4098
Change-Id: I57bbc453be892a6425a23d5ec58c140cf9736cda
Signed-off-by: Fiete Ostkamp <Fiete.Ostkamp@telekom.de>